css/style.css
/* reset */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
/*-------*/

/*----GENERAL----*/

*{
    font-family: 'DePixel', Arial, Helvetica, sans-serif;

}

main{
    height: 100vh;
    padding-top: 50px;

    background-image: url(../img/background.webp);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.title{
    display: block;
    text-align: center;

    width: 700px;
    color: whitesmoke;
    margin:0 auto;
    margin-bottom: 2rem;
    text-shadow: -1px -1px 1px rgb(237, 206, 6), -2px -2px 1px rgb(237, 206, 6), -3px -3px 1px rgb(237, 206, 6), -4px -4px 1px rgb(237, 206, 6);

}

.form-container {

    text-align: center;

    width: 700px;
    height: 100px;
    margin: 0 auto ;
}

.form-container label{
    color: whitesmoke;
    text-shadow: -1px -1px 1px rgb(237, 206, 6);

}

#grid-generator{
    cursor: pointer;
}

.my-container{
    width: 700px;
    min-height: 700px;
    margin: 100px auto;
}

.cell{
    text-align: center;
    /* border: 1px solid gray; */
    background-color: bisque;
    position: relative;
    border: 2px solid black;
    
}

.cell.cell-10{

    width:calc(700px / 10) ;
    height:calc(700px / 10) ;
    
}

.cell.cell-9{

    width:calc(700px / 9) ;
    height:calc(700px / 9) ;

}

.cell.cell-7{

    width:calc(700px / 7) ;
    height:calc(700px / 7) ;

}

.content{
    width: 100%;
    height: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 2px solid black;
}
.content > img{
    display: block;
    width: 100%;
    object-fit: scale-down;
    
}
.content::selection{
    background-color: transparent;
}


.cell.active{
    background-color: lightblue;
}

.cell.bomb{
    background-color: red;
}

.overlay-top{
    position:absolute;
    top: 0;
    left: 0;
    background-color: rgb(187, 187, 187);
    width: 100%;
    border: 2px solid rgb(227, 227, 227);
    height: 50%;
    transition: height 0.3s ;

    border-bottom: 0;
}

.overlay-bottom{
    position:absolute;
    bottom: 0;
    right: 0;
    background-color: rgb(187, 187, 187);
    width: 100%;
    height: 50%;
    transform: rotate(180deg);
    border: 2px solid rgb(227, 227, 227);
    transition: height 0.3s ;
    border-bottom: 0;
}

.my-taper{
    position: absolute;
    bottom: 0;
    left: 0;
    height: 5px;
    width: 100%;

    transition: height 0.2s;

    transition-delay: 0.1s;
  
}

.my-taper.top{
    background:repeating-linear-gradient(45deg, black 0 4px , yellow 4px 8px);
    background-repeat: repeat-x;

}
.my-taper.bottom{
    
    background:repeating-linear-gradient(45deg, black 0px 4px ,yellow 4px 8px);
    background-repeat: repeat-x;

}

.overlay-top.my-collapse, .overlay-bottom.my-collapse,.overlay-top.my-collapse > .my-taper, .overlay-bottom.my-collapse > .my-taper{
    height: 0%;

}

.trigger{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    cursor: pointer;
}

.end-game{
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: black;
}

.game-over{
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    text-shadow: -1px -1px 1px red,-2px -2px 1px red,-3px -3px 1px red,-4px -4px 1px red;
    color: yellow;
}

.end-game.show{
    display: block;
}

#restart{
    position: absolute;
    transform: translate(-50%, -50%);
    top: 60%;
    left: 50%;
    cursor: pointer;
}

